# howfar-python

./: COPYING  README.md  pyproject.toml
howfar/: database.py  dataconv.py  ringfs.py  settings.py  uf2.py
howfar/cli/: conf.py  read.py
