[project]
name = "howfar"
version = "20240917"
authors = [
  { name="Kosma Moczek", email="kosma@kosma.pl" },
]
description = "Data extraction utilities for HowFar"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.scripts]
howfar-read = "howfar.cli.read:main"
howfar-conf = "howfar.cli.conf:main"

[project.urls]
Homepage = "https://github.com/howfarpwr/howfar-python"
